syntax = "proto2";

message Test {
    optional uint32 x = 1;
    optional fixed64 y = 2;
    optional string z = 3;
    optional Test child1 = 4;
    optional group Child2 = 5 {
        optional sint64 x = 1;
        optional Test recursive = 2;
    }

    message NestedMessage {
        optional sint64 x = 1;
        optional Test recursive = 2;
    }
    repeated NestedMessage nested_message = 6;
    repeated bytes rep_bytes = 7;
}

message DefaultsTest {
    optional int32 port = 1 [default = 8080];
    optional bool enabled = 2 [default = true];
    optional float ratio = 3 [default = 3.14];
    optional double precise = 4 [default = 2.71828];
    optional uint32 count = 5 [default = 42];
    optional int64 big_number = 6 [default = -9223372036854775808];
    optional float special_inf = 7 [default = inf];
    optional float special_neg_inf = 8 [default = -inf];
    optional float special_nan = 9 [default = nan];
    optional string greeting = 10 [default = "Hello, World!"];
    optional string multiline = 11 [default = "Line1\nLine2\tTabbed"];
    optional string escaped = 12 [default = "Quote: \" Backslash: \\"];
}

